--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,4 +1,8 @@
+CONFIG_ZMK_KEYBOARD_NAME="Pocket-Ferris"
+
 # Enable new bluetooth feature, fixes connection for windows
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
 CONFIG_ZMK_MOUSE=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
