--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -6,3 +6,6 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_MOUSE=y
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
